syntax = "proto3";

package proto.vm.v1;

option go_package = "proto/vm/v1";

service VmService {
  rpc Create(CreateVmRequest) returns (CreateVmResponse){}
  rpc SendCommand(SendCommandVmRequest) returns (SendCommandVmResponse){}
  rpc GetLogs(GetLogsVmRequest) returns (GetLogsVmResponse){} // transport via scp
}

message Vm{
  string ip = 1;
  string nodeIp = 2;
  string kernelPath = 3;
  string rootfsPath = 4;
}

message CreateVmRequest{
  string ip = 1;
  string kernelPath = 2;
  string rootfsPath = 3;
}

message CreateVmResponse{
  Vm vm = 1;
}

message SendCommandVmRequest{
  string ip = 1;
  string command = 2;
}

message SendCommandVmResponse{
  string output = 1;
}

message GetLogsVmRequest{
  string ip = 1;
}

message GetLogsVmResponse{
}